--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body{
   margin: 0%;
   padding: 0%;
-  background-color: rgb(228, 232, 255);
+  background-color: rgb(216, 222, 255);
 }
 
 header{
@@ -35,13 +35,13 @@ header p{
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.192);
   backdrop-filter: blur(60px);
 }
-
+ 
 #leftNav{
-  background: linear-gradient(to right, rgba(142, 153, 251, 0.613), rgba(26, 199, 252, 0.689));
-}
+ background: linear-gradient(to right, rgba(142, 153, 251, 0.613), rgba(26, 199, 252, 0.689));
+} 
 #rightNav{
   background: linear-gradient(to left, rgba(142, 153, 251, 0.613), rgba(26, 199, 252, 0.689));
-}
+} 
 .navText{
   font-size: clamp(14px,2vw,24px);
   margin-left: 25px;
@@ -112,11 +112,11 @@ button p{
 }
 
 .taskDiv{
-  background-color: rgba(255, 255, 255, 0.571);
+ background-color: rgba(255, 255, 255, 0.571); 
   display: flex;
   align-items: center;
-  padding-left: 3vw;
-  font-size: clamp(15px,3vw,25px);
+  padding-left: 5%;
+  font-size: clamp(15px,3vw,30px);
   border-radius: 12px;
   box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.337);
   margin-top: 1vh;
@@ -126,7 +126,7 @@ button p{
 }
 
 .taskDiv p{
-  margin-left: 2vw;
+  margin-left: 3%;
   margin-top: 0%;
   margin-bottom: 0%;
 }
@@ -159,4 +159,5 @@ button p{
 
 #smallText{
   font-size: clamp(12px,2vw,20px);
+
 }
